tests/topconst_const_cycle_unused_bad.stderr
tests/topconst_const_cycle_unused_bad.sl:4:1: error: SL2055: const initializer must be a const expression: cyclic top-level initializer dependency
