tests/topconst_const_cycle_unused_bad.sl
// Verifies topconst const cycle unused is rejected.
const A = B

const B = A

fn main() {}
